chore: modify github actions

--- a/.github/workflows/on-release.yml
+++ b/.github/workflows/on-release.yml
@@ -1,9 +1,8 @@
 name: Publish Package
 
 on:
-  create:
-    tags:
-      - 'v*'
+  release:
+    types: [published]
 
 env:
   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
