--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "registry": "https://npm.pkg.github.com/@hitesh22b"
   },
   "dependencies": {
-    "@nestjs/common": "^8.4.7"
+    "@nestjs/common": "^8.4.7",
+    "@nestjs/core": "^8.4.7",
+    "@types/jsonwebtoken": "^8.5.8",
+    "jsonwebtoken": "^8.5.1"
   },
   "devDependencies": {
     "@commitlint/cli": "^9.1.2",
